# ai-support-intelligence-hub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  ai_support_dashboard.py  app_pro_final.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  run.bat  run.ps1  run_no_deps.bat  run_pro.py  run_pro_venv.bat
.github/workflows/: ci.yml
assistant/: __init__.py  agent.py  build_agent.py  config.py  heuristics.py  llm.py  logging_utils.py  parsing.py  prompts.py  rag.py  rag_fixed.py  service.py  teardown.py  tools.py  ui_theme.py
tests/: test_app.py  test_config.py  test_llm.py  test_rag.py  test_service.py
